datasets/dataset_txt/scikit_learn/scikit-learn_1826.txt
Contributor
huzq85 commented on Oct 17, 2017 •
edited by TomDLT
Description
When I am trying to make latexpdf, it will raise following exceptions:
Exception occurred:
  File "/usr/local/lib/python2.7/dist-packages/sphinx_gallery/gen_gallery.py", line 329, in sumarize_failing_examples
    "\n" + "-" * 79)
ValueError: Here is a summary of the problems encountered when running the examples

Unexpected failing examples:
/home/users/research/openSource/scikit-learn-fork/examples/applications/plot_stock_market.py failed leaving traceback:
Traceback (most recent call last):
  File "/home/users/research/openSource/scikit-learn-fork/examples/applications/plot_stock_market.py", line 225, in <module>
    symbol, start_date, end_date))
  File "/home/users/research/openSource/scikit-learn-fork/examples/applications/plot_stock_market.py", line 85, in wrapper
    return f(*args, **kwargs)
  File "/home/users/research/openSource/scikit-learn-fork/examples/applications/plot_stock_market.py", line 127, in quotes_historical_google
    min_date = min(data['date'], default=datetime.min.date())
TypeError: min() got an unexpected keyword argument


/home/users/research/openSource/scikit-learn-fork/examples/applications/plot_out_of_core_classification.py failed leaving traceback:
Traceback (most recent call last):
  File "/home/users/research/openSource/scikit-learn-fork/examples/applications/plot_out_of_core_classification.py", line 111
    end='')
       ^
SyntaxError: invalid syntax
Steps/Code to Reproduce
Install the necessary libraries.
Enter into the doc directory by typing cmd: cd/root_scikit_learn_source/doc
Typing cmd: make latexpdf
Wating for building procedure finish, however, the exceptions raise out.
Expected Results
It should no exceptions or errors occurred.
Actual Results
Exceptions occurred and latexpdf build has been interrupted. Detail log has been attached.
sphinx-err-02bVCM.log
Versions
Linux-4.4.0-43-Microsoft-x86_64-with-Ubuntu-16.04-xenial
('Python', '2.7.12 (default, Nov 19 2016, 06:48:10)
('NumPy', '1.13.3')
('SciPy', '0.16.0')
('Scikit-Learn', '0.20.dev0')